--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -210,15 +210,33 @@
                     </li>
                  
                     <li class="nav-item">
+                        <a routerLink="/admin/fields">
+                            <i class="fa fa-desktop"></i>
+                            <p>Category Fields</p>
+                        </a>
+                    </li>
+                    <li class="nav-item">
                         <a routerLink="/admin/subfields">
                             <i class="fa fa-desktop"></i>
                             <p>Sub Category Fields</p>
                         </a>
                     </li>
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a data-toggle="collapse" >
                             <i class="fa fa-desktop"></i>
                             <p>Menu Levels</p>
+                        </a>
+                    </li> -->
+                    <li class="nav-item">
+                        <a routerLink="/admin/searchfields">
+                            <i class="fa fa-desktop"></i>
+                            <p>Search Fields</p>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a routerLink="/admin/news">
+                            <i class="fa fa-desktop"></i>
+                            <p>News</p>
                         </a>
                     </li>
                 </ul>
