--- a/src/app/home/news/news.component.html
+++ b/src/app/home/news/news.component.html
@@ -1,4 +1,149 @@
-<div id="page-banner-area" class="page-banner">
+
+              <!-- Property Section Start -->
+              <section class="property section-padding">
+                <div *ngFor="let sec of Categories" class="container">
+                  
+                  <div class="row">
+                    <div class="col-12">
+                      <div class="section-title-header text-center">
+                        <h2 class="section-title">{{sec.category}}</h2>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="row" *ngIf="loading" style="justify-content: center;" >
+                    <div class="spinner-grow" style="width: 3rem; height: 3rem;" role="status">
+                      <span class="sr-only">Loading...</span>
+                    </div>
+                  </div>
+                  <div class="row" *ngIf="!loading">
+                    <div *ngFor="let _post of News | news: sec.category" class="col-lg-4 col-md-6 col-xs-12">
+                      <div class="property-main">
+                        <div class="property-wrap">
+                          <div class="property-item">
+                            <div class="item-thumb">
+                              <a class="hover-effect" href="property.html">
+                                <img class="img-fluid" [src]="_post.image" alt="">
+                              </a>
+                              <div class="label-inner">
+                              <span class="label-status label bg-red">{{_post.date | date}}</span>
+                              </div>
+                            </div>
+                            <div class="item-body">
+                              <h3 class="property-title"><a href="property.html">{{_post.title}}</a></h3>
+                              <div class="adderess">{{_post.des}}</div>
+                              <!-- <div *ngFor="let f of _post.fields"><div class="adderess"><i [class]="f.icon"></i>{{f.title}}:<span class="m-1">{{f.value}}</span></div></div> -->
+                              <div class="pricin-list">
+                                <div class="property-price">
+                                  <span>${{_post.price}}</span>
+                                </div>
+                               <p><span>4 bds</span> . <span>4 ba</span> . <span>2500 Sqft</span></p>
+                              </div>
+                            </div>      
+                            <div class="card-footer text-muted">
+                              <div *ngFor="let f of _post.fields" style="display: inline; margin-right: 15px;">
+                                <i [class]="f.icon"></i><span class="m-1">{{f.value}}</span>
+                                </div>
+                            </div>         
+                          </div>              
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-12">
+                      <div class="text-center">
+                        <!-- <h4 *ngIf="Posts" class="btn btn-common">Browse All</h4> -->
+                      </div> 
+                    </div>  
+                  </div>
+                </div>
+              </section>
+              <!-- Property Section End -->   
+          
+  
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- <div id="page-banner-area" class="page-banner">
     <div class="page-banner-title">
         <div class="text-center">
             <h2>Property -Blog</h2>
@@ -14,20 +159,18 @@
         <div class="row">
             <div class="col-lg-8 col-md-12 col-xs-12">
 
-                <div class="blog-post">
+                <div *ngIf="Sele_News" class="blog-post">
                     <a href="single-blog.html" class="post-img">
                         <img class="img-fluid" src="assets/img/blog/blog-post1.jpg" alt="">
                     </a>
 
                     <div class="content">
-                        <h2>
-    <a href="single-blog.html">Great House on The Hills</a>
-    </h2>
+                        <h2> <a href="single-blog.html">{{Sele_News.title}}</a> </h2>
                         <ul class="post-meta">
-                            <li>Novemer 12, 2018</li>
-                            <li><a href="#">5 Comments</a></li>
+                            <li>{{Sele_News.date | date}}</li>
+                            <li><a href="#">{{Sele_News.comments.length}} Comments</a></li>
                         </ul>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, eiusmod tempor incididunt ut labore. Lorem ipsum dolor sit amet, consectetur adipiscing elit, eiusmod tempor incididunt ut labore et dolore magna aliqua. Class aptent taciti sociosqu ad litora torquent…</p>
+                        <p>{{Sele_News.des}}</p>
                         <a href="single-blog.html" class="btn btn-common read-more">Read More <i class="lni-chevron-right"></i></a>
                     </div>
                 </div>
@@ -40,93 +183,26 @@
                         <div class="search-blog-input">
                             <div class="input">
                                 <input class="form-control" type="text" placeholder="Type and hit enter" value="">
-                                <i class="lni-search"></i>
                             </div>
                         </div>
                         <div class="clearfix"></div>
                     </div>
                     <div class="widget">
-                        <h3 class="sidebar-title">Popular Posts</h3>
+                        <h3 class="sidebar-title mt-2">Posts</h3>
                         <ul class="widget-tabs">
-                            <li>
+                            <li *ngFor="let news of News">
                                 <div class="widget-content">
                                     <div class="widget-thumb">
-                                        <a href="single-blog.html"><img src="assets/img/blog/blog-widget-01.jpg" alt=""></a>
+                                        <a href="single-blog.html"><img src="assets/img/blog/blog-post1.jpg" alt=""></a>
                                     </div>
                                     <div class="widget-text">
-                                        <h5><a href="single-blog.html">What to Do a Year Before Buying Apartment </a></h5>
-                                        <span>October 26, 2018</span>
+                                        <h5><a (click)="Sele_News=news;">{{news.title}}</a></h5>
+                                        <span>{{news.date| date}}</span>
                                     </div>
                                     <div class="clearfix"></div>
                                 </div>
                             </li>
                         </ul>
-                    </div>
-
-                    <div class="widget">
-                        <h3 class="sidebar-title">Featured Properties</h3>
-                        <div id="listing-carousel" class="owl-carousel">
-                            <div class="item">
-                                <div class="listing-item">
-                                    <a href="#" class="listing-img-container">
-                                        <img src="assets/img/productinfo/listing1.jpg" alt="">
-                                        <div class="listing-badges">
-                                            <span class="featured">Featured</span>
-                                            <span>For Sale</span>
-                                        </div>
-                                        <div class="listing-content">
-                                            <span class="listing-title">Eagle Apartments <i>$275,000</i></span>
-                                            <ul class="listing-content">
-                                                <li>Area <span>530 sq ft</span></li>
-                                                <li>Rooms <span>3</span></li>
-                                                <li>Beds <span>1</span></li>
-                                                <li>Baths <span>1</span></li>
-                                            </ul>
-                                        </div>
-                                    </a>
-                                </div>
-                            </div>
-                            <div class="item">
-                                <div class="listing-item">
-                                    <a href="#" class="listing-img-container">
-                                        <img src="assets/img/productinfo/listing2.jpg" alt="">
-                                        <div class="listing-badges">
-                                            <span class="featured">Featured</span>
-                                            <span>For Sale</span>
-                                        </div>
-                                        <div class="listing-content">
-                                            <span class="listing-title">Eagle Apartments <i>$275,000</i></span>
-                                            <ul class="listing-content">
-                                                <li>Area <span>530 sq ft</span></li>
-                                                <li>Rooms <span>3</span></li>
-                                                <li>Beds <span>1</span></li>
-                                                <li>Baths <span>1</span></li>
-                                            </ul>
-                                        </div>
-                                    </a>
-                                </div>
-                            </div>
-                            <div class="item">
-                                <div class="listing-item">
-                                    <a href="#" class="listing-img-container">
-                                        <img src="assets/img/productinfo/listing3.jpg" alt="">
-                                        <div class="listing-badges">
-                                            <span class="featured">Featured</span>
-                                            <span>For Sale</span>
-                                        </div>
-                                        <div class="listing-content">
-                                            <span class="listing-title">Eagle Apartments <i>$275,000</i></span>
-                                            <ul class="listing-content">
-                                                <li>Area <span>530 sq ft</span></li>
-                                                <li>Rooms <span>3</span></li>
-                                                <li>Beds <span>1</span></li>
-                                                <li>Baths <span>1</span></li>
-                                            </ul>
-                                        </div>
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
                     </div>
 
                     <div class="widget widget-social">
@@ -142,4 +218,4 @@
             </div>
         </div>
     </div>
-</div>
+</div> -->
