--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -107,7 +107,7 @@
                     </li>
              
                     <li class="nav-item dropdown hidden-caret">
-                        <a class="dropdown-toggle profile-pic" data-toggle="dropdown" href="#" aria-expanded="false">
+                        <a class="dropdown-toggle profile-pic" data-toggle="dropdown" aria-expanded="false">
                             <div class="avatar-sm">
                                 <img src="../assets/img/profile.jpg" alt="..." class="avatar-img rounded-circle">
                             </div>
@@ -131,7 +131,7 @@
                                     <div class="dropdown-divider"></div>
                                     <a class="dropdown-item" href="#">Account Setting</a>
                                     <div class="dropdown-divider"></div>
-                                    <a class="dropdown-item" href="#">Logout</a>
+                                    <a (click)="logout()" class="dropdown-item">Logout</a>
                                 </li>
                             </div>
                         </ul>
