--- a/src/app/admin/sub-cat-fields/sub-cat-fields.component.html
+++ b/src/app/admin/sub-cat-fields/sub-cat-fields.component.html
@@ -19,32 +19,24 @@
         <div class="page-inner mt--5">
             <div class="row mt--2">
 
-                <div class="col-md-3">
+                <div class="col-md-4">
                     
                     <div class="card">
                         <div class="card-body">
                             <div class="card-title">Sub Categories</div>
-
-                            <div class="table-responsive">
-                                <table class="table">
-                                  <tbody>
-                                      <div *ngFor="let cat of Categories">
-                                        <tr>
-                                            <th class="text-nowrap" scope="row">{{cat.name}}</th>
-                                        </tr>
-                                        <tr *ngFor="let sub of cat.cat">
-                                            <td class="btn" (click)="S_subcategory=sub;cate=cat;" scope="row">{{sub.name}}</td>
-                                        </tr>
-                                        <tr>
-                                        </tr>
-                                      </div>
-                                  </tbody>
-                                </table>
-                              </div>
+                            <mat-accordion>
+                              <mat-expansion-panel *ngFor="let cat of Categories">
+                                <mat-expansion-panel-header>
+                                  <mat-panel-title>{{cat.name}}
+                                  </mat-panel-title>
+                                </mat-expansion-panel-header>
+                                  <button *ngFor="let sub of cat.cat" (click)="S_subcategory=sub;cate=cat;" class="btn btn-link btn-sm d-block">{{sub.name}}</button>
+                              </mat-expansion-panel>
+                            </mat-accordion>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-9">
+                <div class="col-md-8">
                     <div class="card">
                         <div class="card-header">
                             <h4 class="card-title">{{S_subcategory.name}}</h4>
@@ -62,8 +54,9 @@
                             <div class="form-group ">
                               <select class="form-control" [(ngModel)]="edit.type" name="type" id="type">
                                 <option value="text">Text</option>
-                                <option value="type">Type</option>
-                                <option value="icon">Icon</option>
+                                <option value="number">Number</option>
+                                <option value="checkbox">CheckBox</option>
+                                <option value="option">Option</option>
                               </select>
                             </div>
                             <div class="form-group ">
